--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/superagent": "^4.1.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-scripts": "3.4.0",
+    "superagent": "^5.2.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
