Feat(ContentView): Criado componente para gerenciar conteúdo e menus
Utilizada a seguinte biblioteca para detectar dispositivos mobiles: 
https://www.npmjs.com/package/react-device-detect

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/superagent": "^4.1.7",
     "http-status-codes": "^1.4.0",
     "react": "^16.13.0",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-router": "^5.1.2",
