--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/superagent": "^4.1.7",
+    "bootstrap": "^4.4.1",
     "http-status-codes": "^1.4.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
