--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,9 +48,9 @@
       "sizes": "512x512"
     }
   ],
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
-  "display": "browser",
+  "theme_color": "#B32E55",
+  "background_color": "#B32E55",
+  "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "permissions": [
