--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,59 +1,1 @@
-{
-  "short_name": "Dino APP",
-  "name": "Dino APP",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./logo/logo72.png",
-      "type": "image/png",
-      "sizes": "72x72"
-    },
-    {
-      "src": "./logo/logo96.png",
-      "type": "image/png",
-      "sizes": "96x96"
-    },
-    {
-      "src": "./logo/logo128.png",
-      "type": "image/png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "./logo/logo144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "./logo/logo152.png",
-      "type": "image/png",
-      "sizes": "152x152"
-    },
-    {
-      "src": "./logo/logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "./logo/logo384.png",
-      "type": "image/png",
-      "sizes": "384x384"
-    },
-    {
-      "src": "./logo/logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "theme_color": "#B32E55",
-  "background_color": "#B32E55",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
-  "permissions": [
-    "https://pet-dino-server.herokuapp.com/"
-  ]
-}
+{"short_name":"Dino APP","name":"Dino APP","icons":[{"src":"favicon.ico","sizes":"64x64 32x32 24x24 16x16","type":"image/x-icon"},{"src":"./logo/logo72.png","type":"image/png","sizes":"72x72"},{"src":"./logo/logo96.png","type":"image/png","sizes":"96x96"},{"src":"./logo/logo128.png","type":"image/png","sizes":"128x128"},{"src":"./logo/logo144.png","type":"image/png","sizes":"144x144"},{"src":"./logo/logo152.png","type":"image/png","sizes":"152x152"},{"src":"./logo/logo192.png","type":"image/png","sizes":"192x192"},{"src":"./logo/logo384.png","type":"image/png","sizes":"384x384"},{"src":"./logo/logo512.png","type":"image/png","sizes":"512x512"}],"theme_color":"#B32E55","background_color":"#B32E55","display":"standalone","scope":"/","start_url":"/","permissions":["https://pet-dino-test-server.herokuapp.com"]}
