--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-spinners": "^0.8.1",
     "superagent": "^5.2.2",
     "typescript": "~3.7.2"
   },
