--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "acorn": "^7.1.1",
     "bootstrap": "^4.4.1",
     "http-status-codes": "^1.4.0",
+    "immutability-helper": "^3.0.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-device-detect": "^1.11.14",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dnd-touch-backend": "^10.0.2",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-router": "^5.1.2",
