--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.4",
     "@types/superagent": "^4.1.7",
     "acorn": "^7.1.1",
     "bootstrap": "^4.4.1",
