--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lourenci/react-kanban": "^1.1.0",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.47",
@@ -22,15 +23,13 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-device-detect": "^1.11.14",
-    "react-dnd": "^10.0.2",
-    "react-dnd-html5-backend": "^10.0.2",
-    "react-dnd-touch-backend": "^10.0.2",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
+    "styled-components": "^5.1.0",
     "superagent": "^5.2.2",
     "typescript": "~3.7.2"
   },
