Feat(Prettier): vscode autosave

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.vscode/
-
 _replicator/
 
 _users/
@@ -31,3 +29,5 @@ _users/
 pouch__all_dbs__/
 
 log.txt
+
+.vscode/launch.json
