--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
+    "react-number-format": "^4.4.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
