Feat(GlossaryProvider): Provider para dados do glossário com atualização automática

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "start": "prettier --write . && react-scripts start --ssl",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "prettier": "prettier --write .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
