--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "stompjs": "^2.3.3",
     "styled-components": "^5.1.0",
     "superagent": "^5.2.2",
+    "ts-node": "^8.10.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
