--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-number-format": "^4.4.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
