Feat(V01): Versão com bug por delay na rendenização

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/calendar": "^0.1.0",
     "@types/jest": "^24.0.0",
     "@types/luxon": "^1.22.0",
     "@types/node": "^12.0.0",
@@ -23,9 +24,12 @@
     "@types/superagent": "^4.1.7",
     "acorn": "^7.1.1",
     "bootstrap": "^4.4.1",
+    "calendar": "^0.1.1",
     "http-status-codes": "^1.4.0",
     "immutability-helper": "^3.0.2",
     "luxon": "^1.24.0",
+    "moment": "^2.27.0",
+    "nuka-carousel": "^4.7.0",
     "pouchdb": "^7.2.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
