--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^4.2.4",
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
@@ -41,7 +42,9 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.27.4",
     "react-spinners": "^0.8.1",
+    "react-touch-carousel": "^0.9.4",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.1.0",
