Feat(Pagination): Mudança de paginacao horizontal

--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "@material-ui/lab": "^4.0.0-alpha.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/calendar": "^0.1.0",
-    "@types/jest": "^24.0.0",
     "@types/luxon": "^1.22.0",
     "@types/node": "^12.0.0",
     "@types/pouchdb": "^6.4.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
-    "@types/react-slick": "^0.23.4",
     "@types/react-swipe": "^6.0.0",
-    "@types/react-transition-group": "^4.2.4",
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
     "@types/superagent": "^4.1.7",
-    "acorn": "^7.1.1",
+    "babel-eslint": "10.0.3",
     "bootstrap": "^4.4.1",
     "calendar": "^0.1.1",
+    "clsx": "^1.1.1",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "http-status-codes": "^1.4.0",
-    "immutability-helper": "^3.0.2",
     "luxon": "^1.24.0",
     "moment": "^2.27.0",
-    "nuka-carousel": "^4.7.0",
     "pouchdb": "^7.2.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
@@ -39,14 +40,11 @@
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.1",
     "react-number-format": "^4.4.1",
-    "react-responsive-carousel": "^3.2.9",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-slick": "^0.27.4",
     "react-spinners": "^0.8.1",
     "react-swipe": "^6.0.4",
-    "react-touch-carousel": "^0.9.4",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.1.0",
