--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "luxon": "^1.24.0",
     "moment": "^2.27.0",
     "pouchdb": "^7.2.1",
+    "pouchdb-find": "^7.2.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-device-detect": "^1.11.14",
