--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
     "react-swipe": "^6.0.4",
+    "react-weekday-picker": "^1.0.8",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.1.0",
