--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "^12.0.0",
     "@types/pouchdb": "^6.4.0",
     "@types/react": "^16.9.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-swipe": "^6.0.0",
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
+    "@types/styled-components": "^5.1.3",
     "@types/superagent": "^4.1.7",
     "babel-eslint": "10.0.3",
     "bootstrap": "^4.4.1",
@@ -39,6 +41,7 @@
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.2",
     "react": "^16.13.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
@@ -52,7 +55,7 @@
     "react-weekday-picker": "^1.0.8",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.1",
     "superagent": "^5.2.2",
     "ts-node": "^8.10.2",
     "typescript": "~3.7.2"
