--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@types/calendar": "^0.1.0",
+    "@types/dexie": "^1.3.1",
     "@types/luxon": "^1.22.0",
     "@types/node": "^12.0.0",
     "@types/pouchdb": "^6.4.0",
@@ -28,6 +29,7 @@
     "calendar": "^0.1.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
+    "dexie": "^3.0.2",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.0",
