Feat(SplashScreen): Tela de carregamento

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.4.1",
     "calendar": "^0.1.1",
     "clsx": "^1.1.1",
+    "compression": "^1.7.4",
     "date-fns": "^2.15.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -33,9 +34,12 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "http-status-codes": "^1.4.0",
     "luxon": "^1.24.0",
     "moment": "^2.27.0",
+    "path": "^0.12.7",
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.2",
     "react": "^16.13.0",
@@ -59,6 +63,7 @@
   },
   "scripts": {
     "start": "react-scripts start --ssl",
+    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "prettier": "prettier --write .",
