--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "prettier": "prettier --write .",
-    "compress-images": "node scripts/compressImages.js",
+    "compress-images": "echo \"fooo\" && exit 1",
     "server": "node scripts/server.js",
     "eject": "react-scripts eject"
   },
