--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^9.3.2",
     "@types/calendar": "^0.1.0",
     "@types/dexie": "^1.3.1",
-    "@types/node": "^12.0.0",
     "@types/pouchdb": "^6.4.0",
     "@types/react": "^16.9.0",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -25,8 +24,6 @@
     "babel-eslint": "10.0.3",
     "bootstrap": "^4.4.1",
     "calendar": "^0.1.1",
-    "clsx": "^1.1.1",
-    "compression": "^1.7.4",
     "date-fns": "^2.15.0",
     "dexie": "^3.0.2",
     "eslint-config-react-app": "^5.2.1",
@@ -35,15 +32,8 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
     "http-status-codes": "^1.4.0",
-    "imagemin": "^7.0.1",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.1",
-    "imagemin-svgo": "^8.0.0",
     "moment": "^2.27.0",
-    "path": "^0.12.7",
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.2",
     "react": "^16.13.0",
@@ -61,7 +51,6 @@
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "superagent": "^5.2.2",
-    "ts-node": "^8.10.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -93,6 +82,15 @@
     ]
   },
   "devDependencies": {
+    "compression": "^1.7.4",
+    "depcheck": "^1.3.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "imagemin-svgo": "^8.0.0",
+    "path": "^0.12.7",
     "pre-commit": "^1.2.2",
     "prettier": "2.0.5"
   }
