--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "jsx": "react",
     "noImplicitAny": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "build"]
 }
