--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"@types/sockjs-client": "^1.1.1",
 		"@types/stompjs": "^2.3.4",
 		"@types/superagent": "^4.1.7",
-		"babel-eslint": "10.0.3",
 		"bootstrap": "^4.4.1",
 		"calendar": "^0.1.1",
 		"compression": "^1.7.4",
@@ -44,7 +43,7 @@
 		"react-number-format": "^4.4.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.4.0",
+		"react-scripts": "4.0.0",
 		"react-spinners": "^0.8.1",
 		"react-swipe": "^6.0.4",
 		"sockjs-client": "^1.4.0",
@@ -56,10 +55,10 @@
 		"start": "react-scripts start --ssl",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
+		"eject": "react-scripts eject",
 		"prettier": "prettier --write .",
 		"compress-images": "node scripts/compressImages.js",
-		"server": "node scripts/server.js",
-		"eject": "react-scripts eject"
+		"server": "node scripts/server.js"
 	},
 	"pre-push": [
 		"prettier"
@@ -89,6 +88,7 @@
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
 		"pre-push": "^0.1.1",
-		"prettier": "2.0.5"
+		"prettier": "2.0.5",
+		"workbox-build": "^6.0.2"
 	}
 }
