--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
 		"pre-push": "^0.1.1",
-		"prettier": "2.0.5",
-		"workbox-build": "^6.0.2"
+		"prettier": "2.0.5"
 	}
 }
