--- a/.gitignore
+++ b/.gitignore
@@ -22,17 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-_replicator/
-
-_users/
-
-pouch__all_dbs__/
-
-log.txt
-
+# vscode config
 .vscode/launch.json
 .vscode/settings.json
 
+# environment 
 src/environment/
-
-*.log
