--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,19 +12,14 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "noImplicitAny": false,
-    "noFallthroughCasesInSwitch": true
+    "jsx": "react-jsx"
   },
-  "exclude": [
-    "node_modules",
-    "build"
-  ],
   "include": [
     "src"
   ]
