--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "^16.9.0",
 		"@types/react-router-dom": "^5.1.6",
 		"@types/react-swipe": "^6.0.0",
+		"@types/react-swipeable-views": "^0.13.0",
 		"@types/sockjs-client": "^1.1.1",
 		"@types/stompjs": "^2.3.4",
 		"@types/superagent": "^4.1.7",
@@ -47,6 +48,7 @@
 		"react-scripts": "3.4.0",
 		"react-spinners": "^0.8.1",
 		"react-swipe": "^6.0.4",
+		"react-swipeable-views": "^0.13.9",
 		"sockjs-client": "^1.4.0",
 		"stompjs": "^2.3.3",
 		"superagent": "^5.2.2",
