--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"@types/crypto-js": "^4.0.1",
+		"@types/cryptojs": "^3.1.29",
+		"@types/cryptr": "^4.0.1",
 		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
 		"bootstrap": "^4.6.0",
 		"calendar": "^0.1.1",
+		"crypto-js": "^4.0.0",
 		"date-fns": "^2.16.1",
 		"dexie": "^3.0.3",
 		"moment": "^2.29.1",
