Feat(Invalidation of repeated values): on GlossaryItem and Email

--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/lab": "^4.0.0-alpha.57",
 		"@material-ui/pickers": "^3.2.10",
-		"@testing-library/dom": "^7.29.4",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^16.9.53",
-		"@types/react-dom": "^16.9.8",
 		"bootstrap": "^4.6.0",
 		"calendar": "^0.1.1",
 		"date-fns": "^2.16.1",
-		"dexie": "^3.0.3",
 		"moment": "^2.29.1",
+		"dexie": "^3.0.3",
 		"react": "^17.0.1",
 		"react-beautiful-dnd": "^13.0.0",
 		"react-bootstrap": "^1.4.3",
@@ -56,8 +48,7 @@
 		"eject": "react-scripts eject",
 		"prettier": "prettier --write .",
 		"compress-images": "node scripts/compressImages.js",
-		"server": "node scripts/server.js",
-		"eject": "react-scripts eject"
+		"server": "node scripts/server.js"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -87,6 +78,14 @@
 		"@types/sockjs-client": "^1.5.0",
 		"@types/stompjs": "^2.3.4",
 		"@types/superagent": "^4.1.10",
+		"@types/jest": "^26.0.15",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.53",
+		"@types/react-dom": "^16.9.8",
+		"@testing-library/dom": "^7.29.4",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
 		"compression": "^1.7.4",
 		"depcheck": "^1.3.1",
 		"express": "^4.17.1",
