--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/lab": "^4.0.0-alpha.57",
 		"@material-ui/pickers": "^3.2.10",
-		"@testing-library/dom": "^7.29.4",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
@@ -28,13 +23,11 @@
 		"react-dom": "^17.0.2",
 		"react-number-format": "^4.4.4",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
 		"react-spinners": "^0.10.4",
 		"react-swipe": "^6.0.4",
 		"sockjs-client": "^1.5.0",
 		"stompjs": "^2.3.3",
 		"superagent": "^6.1.0",
-		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1",
 		"workbox-background-sync": "^5.1.3",
 		"workbox-broadcast-update": "^5.1.3",
@@ -77,7 +70,12 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^7.29.4",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
 		"@types/calendar": "^0.1.0",
+		"@types/jest": "^26.0.15",
 		"@types/material-ui": "^0.21.8",
 		"@types/react-beautiful-dnd": "^13.0.0",
 		"@types/react-router": "^5.1.11",
@@ -94,6 +92,8 @@
 		"imagemin-mozjpeg": "^9.0.0",
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
-		"prettier": "^2.2.1"
+		"prettier": "^2.2.1",
+		"react-scripts": "4.0.3",
+		"typescript": "^4.1.2"
 	}
 }
