--- a/package.json
+++ b/package.json
@@ -28,19 +28,7 @@
 		"sockjs-client": "^1.5.0",
 		"stompjs": "^2.3.3",
 		"superagent": "^6.1.0",
-		"web-vitals": "^1.0.1",
-		"workbox-background-sync": "^5.1.3",
-		"workbox-broadcast-update": "^5.1.3",
-		"workbox-cacheable-response": "^5.1.3",
-		"workbox-core": "^5.1.3",
-		"workbox-expiration": "^5.1.3",
-		"workbox-google-analytics": "^5.1.3",
-		"workbox-navigation-preload": "^5.1.3",
-		"workbox-precaching": "^5.1.3",
-		"workbox-range-requests": "^5.1.3",
-		"workbox-routing": "^5.1.3",
-		"workbox-strategies": "^5.1.3",
-		"workbox-streams": "^5.1.3"
+		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -94,6 +82,18 @@
 		"imagemin-svgo": "^8.0.0",
 		"prettier": "^2.2.1",
 		"react-scripts": "4.0.3",
-		"typescript": "^4.1.2"
+		"typescript": "^4.1.2",
+		"workbox-background-sync": "^5.1.3",
+		"workbox-broadcast-update": "^5.1.3",
+		"workbox-cacheable-response": "^5.1.3",
+		"workbox-core": "^5.1.3",
+		"workbox-expiration": "^5.1.3",
+		"workbox-google-analytics": "^5.1.3",
+		"workbox-navigation-preload": "^5.1.3",
+		"workbox-precaching": "^5.1.3",
+		"workbox-range-requests": "^5.1.3",
+		"workbox-routing": "^5.1.3",
+		"workbox-strategies": "^5.1.3",
+		"workbox-streams": "^5.1.3"
 	}
 }
