--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
 	"version": "0.2.0",
 	"private": true,
 	"dependencies": {
+		"@types/calendar": "^0.1.0",
+		"@types/jest": "^26.0.15",
+		"@types/material-ui": "^0.21.8",
+		"@types/react-beautiful-dnd": "^13.0.0",
+		"@types/react-router": "^5.1.11",
+		"@types/react-router-dom": "^5.1.7",
+		"@types/react-swipe": "^6.0.0",
+		"@types/sockjs-client": "^1.5.0",
+		"@types/stompjs": "^2.3.4",
+		"@types/superagent": "^4.1.10",
 		"@date-io/date-fns": "^2.10.6",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
@@ -23,12 +33,26 @@
 		"react-dom": "^17.0.2",
 		"react-number-format": "^4.4.4",
 		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
 		"react-spinners": "^0.10.4",
 		"react-swipe": "^6.0.4",
 		"sockjs-client": "^1.5.0",
 		"stompjs": "^2.3.3",
 		"superagent": "^6.1.0",
-		"web-vitals": "^1.0.1"
+		"typescript": "^4.1.2",
+		"web-vitals": "^1.0.1",
+		"workbox-background-sync": "^5.1.3",
+		"workbox-broadcast-update": "^5.1.3",
+		"workbox-cacheable-response": "^5.1.3",
+		"workbox-core": "^5.1.3",
+		"workbox-expiration": "^5.1.3",
+		"workbox-google-analytics": "^5.1.3",
+		"workbox-navigation-preload": "^5.1.3",
+		"workbox-precaching": "^5.1.3",
+		"workbox-range-requests": "^5.1.3",
+		"workbox-routing": "^5.1.3",
+		"workbox-strategies": "^5.1.3",
+		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -62,16 +86,6 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"@types/calendar": "^0.1.0",
-		"@types/jest": "^26.0.15",
-		"@types/material-ui": "^0.21.8",
-		"@types/react-beautiful-dnd": "^13.0.0",
-		"@types/react-router": "^5.1.11",
-		"@types/react-router-dom": "^5.1.7",
-		"@types/react-swipe": "^6.0.0",
-		"@types/sockjs-client": "^1.5.0",
-		"@types/stompjs": "^2.3.4",
-		"@types/superagent": "^4.1.10",
 		"compression": "^1.7.4",
 		"depcheck": "^1.3.1",
 		"express": "^4.17.1",
@@ -81,19 +95,5 @@
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
 		"prettier": "^2.2.1",
-		"react-scripts": "4.0.3",
-		"typescript": "^4.1.2",
-		"workbox-background-sync": "^5.1.3",
-		"workbox-broadcast-update": "^5.1.3",
-		"workbox-cacheable-response": "^5.1.3",
-		"workbox-core": "^5.1.3",
-		"workbox-expiration": "^5.1.3",
-		"workbox-google-analytics": "^5.1.3",
-		"workbox-navigation-preload": "^5.1.3",
-		"workbox-precaching": "^5.1.3",
-		"workbox-range-requests": "^5.1.3",
-		"workbox-routing": "^5.1.3",
-		"workbox-strategies": "^5.1.3",
-		"workbox-streams": "^5.1.3"
 	}
 }
