--- a/package.json
+++ b/package.json
@@ -94,6 +94,6 @@
 		"imagemin-mozjpeg": "^9.0.0",
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
-		"prettier": "^2.2.1",
+		"prettier": "^2.2.1"
 	}
 }
