--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: dinoapp
-          image: petcompufrgs/dinoapp:stable
+          image: petcompufrgs/dinoapp:staging
           imagePullPolicy: Always
           ports:
             - containerPort: 80
