--- a/package.json
+++ b/package.json
@@ -42,13 +42,12 @@
 		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"prettier": "prettier --write .",
 		"compress-images": "node scripts/compressImages.js",
-		"server": "node scripts/server.js"
+		"start": "node scripts/server.js"
 	},
 	"eslintConfig": {
 		"extends": [
