--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"@material-ui/pickers": "^3.2.10",
 		"bootstrap": "^4.6.0",
 		"calendar": "^0.1.1",
+		"compression": "^1.7.4",
 		"date-fns": "^2.16.1",
 		"dexie": "^3.0.3",
+		"express": "^4.17.1",
+		"express-favicon": "^2.0.1",
 		"moment": "^2.29.1",
 		"react": "^17.0.1",
 		"react-beautiful-dnd": "^13.0.0",
@@ -42,7 +45,7 @@
 		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "node scripts/server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
@@ -85,10 +88,7 @@
 		"@types/sockjs-client": "^1.5.0",
 		"@types/stompjs": "^2.3.4",
 		"@types/superagent": "^4.1.10",
-		"compression": "^1.7.4",
 		"depcheck": "^1.3.1",
-		"express": "^4.17.1",
-		"express-favicon": "^2.0.1",
 		"imagemin": "^7.0.1",
 		"imagemin-mozjpeg": "^9.0.0",
 		"imagemin-pngquant": "^9.0.1",
