--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,19 +2,14 @@
 	"short_name": "DinoApp",
 	"name": "DinoApp",
 	"icons": [
-		{
-			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
-			"type": "image/x-icon"
-		},
-		{ "src": "./logo/logo72.png", "type": "image/png", "sizes": "72x72" },
-		{ "src": "./logo/logo96.png", "type": "image/png", "sizes": "96x96" },
-		{ "src": "./logo/logo128.png", "type": "image/png", "sizes": "128x128" },
-		{ "src": "./logo/logo144.png", "type": "image/png", "sizes": "144x144" },
-		{ "src": "./logo/logo152.png", "type": "image/png", "sizes": "152x152" },
-		{ "src": "./logo/logo192.png", "type": "image/png", "sizes": "192x192" },
-		{ "src": "./logo/logo384.png", "type": "image/png", "sizes": "384x384" },
-		{ "src": "./logo/logo512.png", "type": "image/png", "sizes": "512x512" }
+		{ "src": "./iconx/tile70x70.png", "type": "image/png", "sizes": "70x70" },
+		{ "src": "./iconx/tile150x150.png", "type": "image/png", "sizes": "150x150" },
+		{ "src": "./iconx/tile310x310.png", "type": "image/png", "sizes": "310x310" },
+		{ "src": "./iconx/tile310x150.png", "type": "image/png", "sizes": "310x150" },
+		{ "src": "./iconx/pwa-512x512.png", "type": "image/png", "sizes": "512x512" },
+		{ "src": "./iconx/pwa-192x192.png", "type": "image/png", "sizes": "192x192" },
+		{ "src": "./iconx/favicon-32x32.png", "type": "image/png", "sizes": "32x32" },
+		{ "src": "./iconx/favicon-16x16.png", "type": "image/png", "sizes": "16x16" }
 	],
 	"theme_color": "whitesmoke",
 	"background_color": "whitesmoke",
