--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "dinoapp",
 	"version": "0.2.0",
 	"private": true,
+	"engines": {
+		"node": "14.17.3"
+	},
 	"dependencies": {
 		"@date-io/date-fns": "^2.10.6",
 		"@material-ui/core": "^4.11.2",
