--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.2.0",
 	"private": true,
 	"engines": {
-		"node": "14.17.3"
+		"node": "16.4.2",
+		"npm": "7.19.1"
 	},
 	"dependencies": {
 		"@date-io/date-fns": "^2.10.6",
