--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
-		"start": "node scripts/server.js",
+		"start": "serve -s build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
@@ -97,6 +97,7 @@
 		"imagemin-mozjpeg": "^9.0.0",
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
-		"prettier": "^2.2.1"
+		"prettier": "^2.2.1",
+		"serve": "^12.0.0"
 	}
 }
