--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-scripts": "4.0.1",
 		"react-spinners": "^0.10.4",
 		"react-swipe": "^6.0.4",
+		"serve": "^12.0.0",
 		"sockjs-client": "^1.5.0",
 		"stompjs": "^2.3.3",
 		"superagent": "^6.1.0",
@@ -97,7 +98,6 @@
 		"imagemin-mozjpeg": "^9.0.0",
 		"imagemin-pngquant": "^9.0.1",
 		"imagemin-svgo": "^8.0.0",
-		"prettier": "^2.2.1",
-		"serve": "^12.0.0"
+		"prettier": "^2.2.1"
 	}
 }
