--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "serve -s build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
