--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"workbox-streams": "^5.1.3"
 	},
 	"scripts": {
+		"dev": "react-scripts start",
 		"start": "serve -s build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
